--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Roboto:wght@100&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Roboto:wght@100&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Nanum+Gothic:wght@700&family=PT+Sans+Narrow&family=Roboto:wght@100&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
